# zodiact

./: .gitignore  README.md  docker-compose.yml
Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run.py
Backend/config/: config.py
Backend/src/ai/: client.py
Backend/src/api/: app.py  models.py  schemas.py
Backend/src/api/routers/: ai.py  cards.py  coffee.py  direct.py  feedback.py  info.py  payment.py  tarot.py  user.py
Backend/src/bot/: app.py
Backend/src/bot/handlers/: start.py
Backend/src/db/: models.py  operations.py
Backend/src/utils/: logger.py
Frontend/: .dockerignore  Dockerfile  README.md  index.html  mockServer.js  nginx.conf  package-lock.json  package.json  vite.config.ts
Frontend/src/: App.css  App.tsx  index.css  main.tsx
Frontend/src/assets/images/: README.md  index.ts
Frontend/src/assets/images/cards/: .gitkeep
Frontend/src/assets/images/runes/: .gitkeep
Frontend/src/assets/images/squares/: .gitkeep
Frontend/src/components/: ErrorModal.tsx  FanCards.tsx  InfoButton.css  InfoButton.tsx  LoadingSpinner.tsx  Modal.tsx  NavigationMenu.css  NavigationMenu.tsx  NotificationModal.tsx  RuneCards.tsx  SquareCards.tsx
Frontend/src/features/Categories/: CoffeeReading.tsx  LoveReadings.tsx  PersonalForecast.tsx  RelationshipStatus.tsx  RuneReading.tsx  SituationAnalysis.tsx  SpiritualGrowth.tsx  TarotReading.tsx
Frontend/src/features/NotFound/: NotFound.tsx
Frontend/src/features/Readings/: ReadingContent.ts
Frontend/src/utils/: AppContext.tsx  api.ts  apiEndpoints.ts  telegram.ts
(+17 files in other folders)
